--- a/.gitmodules
+++ b/.gitmodules
@@ -3,6 +3,11 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "FDboost"]
+	path = FDboost
+	url = https://github.com/boost-r/fdboost
+	shallow = true
+	registered = true
 [submodule "gamboostLSS"]
 	path = gamboostLSS
 	url = https://github.com/boost-r/gamboostlss
